# ai-powered-cv-screener

./: .gitignore  README.md
backend/: env.example  generator_cvs_ia.py  main.py  profiles.json  pyproject.toml
backend/api/: chat.py  upload.py
backend/config/: settings.py
backend/schemas/: chat.py  upload.py
backend/services/: bedrock_service.py  retriever_service.py  s3_service.py
backend/utils/: utils.py
frontend/: app.py  config.py  env.example
frontend/ui/: chat.py  home.py  sidebar.py  upload.py
